# mcpm.sh

./: .gitignore  .releaserc.json  AI_AGENT_FRIENDLY_CLI_PLAN.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_INTEGRATION.md  CNAME  CONTRIBUTING.md  DEBUG_GUIDE.md  DEVELOPMENT.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  README.nix.md  README.zh-CN.md  SOLUTION_SUMMARY.md  ZEN_PROFILE_DEPLOYMENT.md  best_practices.md  bump_version.sh  debug_claude_desktop.py  debug_launch.py  debug_profile_detection.py  debug_wrapper.py  default.nix  dev.sh  example_zen_deployment.py  flake.nix  index.html  llm.txt  mcpm_clean_wrapper.sh  mcpm_stdio_clean.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  startup_clean_wrapper.sh  stdout_filter.py  test_cli.py  (+11 more)
.claude/: settings.local.json
.cursor/rules/: conventional-commits.mdc  pytest.mdc
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general-issue.yml  mcp-server-submission.yml  mcp_server_submission.yml
.github/workflows/: auto-update.yml  ci.yml  deploy.yml  frp.yml  generate-llm-txt.yml  mcp-server-info-bot.yml  release.yml  semantic-check.yml  semantic-release.yml  semver-check.yml  test.yml  validate-manifests.yml
.zed/: debug.json
dockerfiles/frpc/: Dockerfile  frpc.ini
dockerfiles/frps/: Dockerfile  frps.ini
docs/: advanced_features.md  dev_guide.md  fastmcp_progress_notification_investigation.md  llm-txt-generation.md  router_share.md  router_tech_design.md
examples/: proxy_transport_types.md
mcp-registry/: .failed_installations.json  README.md  package-lock.json
mcp-registry/schema/: server-schema.json
mcp-registry/servers/: 4everland-hosting-mcp.json  ableton-live.json  ableton-mcp.json  actors-mcp-server.json  agentkit.json  agentql-mcp.json  agentrpc.json  airbnb.json  airflow.json  airtable.json  algorand.json  alicloud-hologres.json  alphavantage.json  amap.json  anki.json  any-chat-completions.json  apimatic-validator-mcp.json  apple-mcp.json  arangodb.json  armor-crypto.json  arxiv-mcp.json  atlas-docs-mcp.json  atlassian.json  aws-athena.json  aws-cost-explorer.json  aws-kb-retrieval.json  aws-resources-operations.json  aws-s3.json  aws.json  azure-adx.json  baidumap.json  base-free-usdc-transfer.json  basic-memory.json  bicscan-mcp.json  bigquery.json  bing-web-search-api.json  bitable-mcp.json  blender.json  brave-search.json  browser-tools-mcp.json  (+327 more)
mcp-registry/tools/: all_servers.md  fetch_manifest.py
pages/: _config.yml  index.html  install
pages/_includes/: colors.css  common.css  footer.html  github-corner.html  lucien-servers.js  nav.html
pages/registry/: README.md  index.html
scripts/: categorization.py  generate_llm_txt.py  get_manifest.py  prepare.py  prepare.sh  update-llm-txt.sh  utils.py  validate_manifest.py
src/mcp/: __init__.py  cli.py  version.py
src/mcp/clients/: __init__.py  claude_desktop.py  cursor.py
src/mcp/commands/: __init__.py  client.py  config.py  disable.py  edit.py  enable.py  inspector.py  install.py  list_servers.py  remove.py  search.py  server.py  status.py  toggle.py  update.py
src/mcp/utils/: __init__.py  client_detector.py  config.py  repository.py  server_manager.py
src/mcpm/: __init__.py  cli.py  global_config.py  version.py
src/mcpm/clients/: __init__.py  base.py  claude_desktop.py  client_config.py  client_registry.py  cursor.py  windsurf.py
src/mcpm/commands/: add.py  (+30 more)
tests/: __init__.py  conftest.py  test_access_monitor.py  test_add.py  test_arguments.py  test_basic.py  test_cli.py  test_client.py  test_config.py  test_edit.py  test_fastmcp_proxy.py  test_global_config.py  test_info.py  test_migration.py  test_new.py  test_profile.py  test_profile_commands.py  test_remove.py  test_router.py  test_run.py  test_search.py  test_share.py  test_stash_pop.py  test_virtual_profiles.py  test_windsurf.py  test_windsurf_integration.py
tests/test_clients/: test_goose.py  test_windsurf.py
(+91 files in other folders)
