[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpm"
dynamic = ["version"]
description = "MCPM - Model Context Protocol Manager"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "MCPM Contributors" }]
maintainers = [{ name = "Path Integral Institute" }]
keywords = [
    "MCPM",
    "MCP",
    "Model Context Protocol",
    "Claude Desktop",
    "Cursor",
    "Windsurf",
]
dependencies = [
    "click>=8.1.3",
    "rich>=12.0.0",
    "requests>=2.28.0",
    "pydantic>=2.5.1",
    "jsonschema>=4.17.0",
    "mcp>=1.6.0",
    "ruamel-yaml>=0.18.10",
]

[project.urls]
Homepage = "https://mcpm.sh"
Repository = "https://github.com/pathintegral-institute/mcpm.sh"
Issues = "https://github.com/pathintegral-institute/mcpm.sh/issues"

[project.scripts]
mcpm = "mcpm.cli:main"

[tool.hatch.version]
path = "src/mcpm/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
fixable = ["I", "F401"]

[dependency-groups]
dev = [
    "ipython>=8.34.0",
    "pytest>=8.3.5",
]
